--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 addict
 gdown
-git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch
+#git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch
 gpustat
 icecream
 imageio-ffmpeg
