--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "third_party/colmap"]
-	path = third_party/colmap
+[submodule "thirdparty/colmap"]
+	path = thirdparty/colmap
 	url = https://github.com/colmap/colmap.git
